--- a/UnivPortal/Views/Shared/_Layout.cshtml
+++ b/UnivPortal/Views/Shared/_Layout.cshtml
@@ -17,15 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("List Departments", "Index", "Departments", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("List Courses", "Index", "Courses")</li>
-                    <li>@Html.ActionLink("List Instructors", "Index", "Instructors")</li>
-                    <li>@Html.ActionLink("List Major", "Index", "Majors")</li>
-                    <li>@Html.ActionLink("List Student", "Index", "Students")</li>
-                   
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
